trunk/Archive2/e2/93eb31ba179862/output
main.cpp: In instantiation of 'Ptr<T, safety_policy>::operator Ptr<T, target_safety>() const [with target_safety = NoChecking; T = int; safety_policy = NotNull]':
main.cpp:87:32:   required from here
main.cpp:55:5: error: static assertion failed: Safety policy of *this is not implicitly convertible to target's safety policy.
     static_assert( std::is_convertible<Ptr, target_host>::value,
     ^
